--- a/public/ui/laut/laut.css
+++ b/public/ui/laut/laut.css
@@ -1,114 +1,142 @@
-body{
+body {
   background-image: none;
-  font-family: Verdana, Helvetica, sans-serif;
-}
+  font-family: Verdana, Helvetica, sans-serif; }
 
-h1, h2, h3, h4 {font-size: 100%; margin: 0; padding: 0; font-weight: inherit;}
+h1, h2, h3, h4 {
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  font-weight: inherit; }
 
-.slide h1 {position: absolute; top: 0.7em; left: 87px; z-index: 1;
-  margin: 0; padding: 0.3em 0 0 50px; white-space: nowrap;
-  font: bold 150%/1em Helvetica, sans-serif; text-transform: capitalize;
-  color: #DDE; background: #005;}
+.slide h1 {
+  position: absolute;
+  top: 0.7em;
+  left: 87px;
+  z-index: 1;
+  margin: 0;
+  padding: 0.3em 0 0 50px;
+  white-space: nowrap;
+  font: bold 150%/1em Helvetica, sans-serif;
+  text-transform: capitalize;
+  color: #DDE;
+  background: #005; }
 
-:link, :visited{
-	text-decoration: underline;
-	color: #4a4a4a;
-}
+:link, :visited {
+  text-decoration: underline;
+  color: #4a4a4a; }
 
-#slide0 h1{
-  color:#a00;
+#slide0 h1 {
+  color: #a00;
   background-color: transparent;
-  padding-left:0;
-}
+  padding-left: 0; }
 
-.slide h1{
-  color:#fff;
+.slide h1 {
+  color: #fff;
   background-color: transparent;
-  padding-left:0;
-}
-
-.slide h1{
-	padding-top:60px;
-	margin-top:-1.5em;
-	margin-left:0px;
-	text-transform: none;
-}
-.slide h2{
-  margin-left:3%;
-}
-.slide h3{
+  padding-left: 0;
+  padding-top: 60px;
+  margin-top: -1.5em;
+  margin-left: 0px;
+  text-transform: none; }
+.slide h2 {
+  margin-left: 3%; }
+.slide h3 {
   font-size: 80%;
-  text-align: center;
-}
-.slide ul{
-  margin-left:3%;
-}
-.slide p{
-	margin-left:0%;
-	margin-right:7%;
-}
+  text-align: center; }
+.slide ul {
+  margin-left: 3%; }
+.slide p {
+  margin-left: 0%;
+  margin-right: 7%; }
+.slide img {
+  display: block;
+  margin: 10px auto;
+  max-height: 13em; }
 
-.slide img{
-  display:block;
-  margin:10px auto;
-  max-height:13em;
-}
+div#header {
+  background: #000 url('lautfm_logo.png') no-repeat top right; }
+div#footer {
+  font-size: 0.5em;
+  font-weight: bold;
+  padding: 1em 0; }
 
-div#header{
-  background: #000 url('lautfm_logo.png') no-repeat top right;
-}
+#footer h1 {
+  display: block;
+  padding: 0 1em; }
+#footer h2 {
+  display: block;
+  padding: 0 1em;
+  font-style: italic; }
 
-div#footer {font-size: 0.5em; font-weight: bold; padding: 1em 0;}
-
-#footer h1, #footer h2 {display: block; padding: 0 1em;}
-#footer h2 {font-style: italic;}
-
-div#footer{
-  color:#fff;
-	background-color: #000;
-}
-div#footer h1, div#footer h2{
-	margin:0;
-	padding:0.2em 1em;
-	line-height:1.2em;
-}
-div#footer a{
-	color:#aab;
-}
-
-div#controls {position: absolute; left: 60%; bottom: 0;
+div#footer {
+  color: #fff;
+  background-color: #000; }
+  div#footer h1, div#footer h2 {
+    margin: 0;
+    padding: 0.2em 1em;
+    line-height: 1.2em; }
+  div#footer a {
+    color: #aab; }
+div#controls {
+  position: absolute;
+  left: 60%;
+  bottom: 0;
   width: 40%;
-  text-align: right; font: bold 0.9em Verdana, Helvetica, sans-serif;}
-html>body div#controls {position: fixed; padding: 0; top: auto;}
-#controls #navLinks a {padding: 0; margin: 0 0.5em; 
-  background: #005; border: none; color: #779; 
-  cursor: pointer;}
-#controls #navList #jumplist {background: #DDD; color: #227;}
-#currentSlide {text-align: center; font-size: 0.5em; color: #449;}
+  text-align: right;
+  font: bold 0.9em Verdana, Helvetica, sans-serif; }
 
+html>body div#controls {
+  position: fixed;
+  padding: 0;
+  top: auto; }
 
-#controls #navLinks a, #plink{
+#controls #navLinks a {
+  padding: 0;
+  margin: 0 0.5em;
+  background: #005;
+  border: none;
+  color: #779;
+  cursor: pointer; }
+#controls #navList #jumplist {
+  background: #DDD;
+  color: #227; }
+
+#currentSlide {
+  text-align: center;
+  font-size: 0.5em;
+  color: #449; }
+
+#controls #navLinks a, #plink {
   background: transparent;
-	color: #aab;
-}
+  color: #aab; }
 
-div#logo{
-	right:20px;
-	position:absolute;
-	width:240px;
-	height:60px;
-	background: url('com_logo.png') no-repeat 20px 10px;
-}
+div#logo {
+  right: 20px;
+  position: absolute;
+  width: 240px;
+  height: 60px;
+  background: url('com_logo.png') no-repeat 20px 10px; }
 
-#navLinks a{
-	background: transparent none;
-}
+#navLinks a {
+  background: transparent none; }
 
-.incremental, .incremental *, .incremental *:after{
-	visibility: hidden;
-}
-.slide .current {color: #333;}
-.slide code {color: #a00;}
-.slide h1.bang{ margin:2.5em 0px 0px 0px; padding:0px; font-size:230%; color:#a00; white-space:normal;}
+.incremental {
+  visibility: hidden; }
+  .incremental * {
+    visibility: hidden; }
+    .incremental *:after {
+      visibility: hidden; }
 
-ul{ margin-bottom:1em; }
+.slide .current {
+  color: #333; }
+.slide code {
+  color: #a00; }
+.slide h1.bang {
+  margin: 2.5em 0px 0px 0px;
+  padding: 0px;
+  font-size: 230%;
+  color: #a00;
+  white-space: normal; }
+
+ul {
+  margin-bottom: 1em; }
