--- a/public/ui/laut/laut.css
+++ b/public/ui/laut/laut.css
@@ -1,12 +1,12 @@
 body { background-image: none; font-family: Verdana, Helvetica, sans-serif; }
 
-h1, h2, h3, h4 { font-size: 100%; margin: 0; padding: 0; font-weight: inherit; }
+h1, h2, h3, h4 { font-size: 100%; margin: 0; padding: 0; font-weight: inherit; text-shadow: none; }
 
 a:link, a:visited { text-decoration: underline; color: #4a4a4a; }
 
 #slide0 h1 { color: #a00; background-color: transparent; padding-left: 0; }
 
-.slide h1 { position: absolute; top: 0.6em; left: 1em; z-index: 1; margin: 0; padding: 0; white-space: nowrap; font: bold 150%; text-transform: capitalize; color: #fff; background-color: transparent; text-transform: none; }
+.slide h1 { position: absolute; top: 0.6em; left: 1em; z-index: 1; margin: 0; padding: 0; white-space: nowrap; font: bold 150%; text-transform: capitalize; color: white; background-color: transparent; text-transform: none; }
 .slide h3 { font-size: 80%; text-align: center; }
 .slide ul { margin-left: 3%; }
 .slide p { margin-left: 0%; margin-right: 7%; }
@@ -17,7 +17,7 @@ a:link, a:visited { text-decoration: underline; color: #4a4a4a; }
 #footer h2 { display: block; padding: 0 1em; font-style: italic; }
 
 div#header { background: black url('lautfm_logo.png') no-repeat top right; }
-div#footer { font-size: 0.5em; font-weight: bold; padding: 1em 0; color: #fff; background-color: #000; }
+div#footer { font-size: 0.5em; font-weight: bold; padding: 1em 0; color: white; background-color: black; }
 div#footer h1, div#footer h2 { margin: 0; padding: 0.2em 1em; line-height: 1.2em; }
 div#footer a { color: #aab; }
 div#controls { position: absolute; left: 60%; bottom: 0; width: 40%; text-align: right; font: bold 0.9em Verdana, Helvetica, sans-serif; }
@@ -30,7 +30,5 @@ html>body div#controls { position: fixed; padding: 0; top: auto; }
 #currentSlide { text-align: center; font-size: 0.5em; color: #449; }
 
 div#logo { right: 20px; position: absolute; width: 240px; height: 60px; background: url('com_logo.png') no-repeat 20px 10px; }
-
-.incremental, .incremental *, .incremental *:after { visibility: hidden; }
 
 ul { margin-bottom: 1em; }
